rivision de etiquetas

--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Encontra el juego de sillas y mesas para tu hogar en nuestra web a un precio increible">
+    <meta name="keywords" content="SILLAS MESAS CALIDAD PRECIOS ECONOMICA VARIEDAD SERVICIO">
     <title>Somos B HOME</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
