--- a/ejemplosclases/index.html
+++ b/ejemplosclases/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>condicionales</h1>
-    <p>ejemplo de condicionales tiene que ver con perro como animales y gatos piuntado de color todo</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque minima fugit sed? Voluptatum eveniet placeat cumque doloremque laboriosam itaque dolorem? Quisquam omnis laudantium eius? Temporibus laboriosam voluptas culpa fugiat quam?</p>
 </body>
 </html></html>
