--- a/index2.html
+++ b/index2.html
@@ -168,7 +168,7 @@
           <p>
             <i class="fas fa-home mr-3"></i>Argentina,Bs As,Gral San Martin,Villa Ballester</p>
           <p>
-            <i class="fas fa-envelope mr-3"></i> Bhome@gmail.com.ar</p>
+            <i class="fas fa-envelope mr-3"></i> Bhome@gmail.com</p>
           <p>
             <i class="fas fa-phone mr-3"></i> 011-3569-9856</p>
           <p>
@@ -184,7 +184,7 @@
     <!-- Footer Links -->
   
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 202 Copyright:
+    <div class="footer-copyright text-center py-3">2021 Copyright
       <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
     </div>
     <!-- Copyright -->
